tinyc/test/bad/true-redeclare-enum.c
int main()
{
    enum
    {
        true = 0,
    };
    return 0;
}
